docs/pago-pa/sanp/3.0.0/SUMMARY.md
# Table of contents

* [⬅️ Torna a pagoPA.gov.it](https://www.pagopa.gov.it/)

## Specifiche attuative del nodo dei pagamenti SPC

* [Premessa](README.md)
* [Changelog](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/changelog.md)
* [Glossario](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/glossario.md)
* [Roadmap](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/roadmap.md)
* [Documentazione](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/documentazione.md)
* [Funzionamento generale](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/README.md)
  * [Ruoli](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ruoli.md)
  * [Ciclo di vita di un pagamento](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ciclo-di-vita-di-un-pagamento.md)
  * [Processi di pagamento](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/processi-di-pagamento.md)
  * [Rendicontazione e Cashflow](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/rendicontazione-e-cashflow.md)
  * [Sicurezza e conservazione](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/sicurezza-e-conservazione.md)
  * [L’adesione alla piattaforma pagoPA](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ladesione-alla-piattaforma-pagopa.md)
  * [Utilizzo del marchio pagoPA](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/utilizzo-del-marchio-pagopa.md)
* [Erogazione e Livelli di servizio](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/erogazione-e-livelli-di-servizio.md)
* [Specifiche tecniche](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/specifiche-tecniche.md)
* [Modello dati](../../../../pagopa/sanp/sanp_3.0.0/specifiche-attuative-del-nodo-dei-pagamenti-spc/modello-dati.md)

## Casi d'uso

* [Pagamento di un avviso presso PSP](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-di-un-avviso-presso-psp.md)
* [Pagamento spontaneo presso PSP](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-spontaneo-presso-psp/README.md)
  * [Catalogo dei servizi](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-spontaneo-presso-psp/catalogo-dei-servizi.md)
  * [Bollo auto](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-spontaneo-presso-psp/bollo-auto.md)
* [Pagamento presso frontend dell'EC](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-presso-frontend-dellec.md)
* [Pagamento da Touchpoint PagoPA](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-da-touchpoint-pagopa/README.md)
  * [Checkout](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-da-touchpoint-pagopa/checkout.md)
  * [App IO](../../../../pagopa/sanp/sanp_3.0.0/casi-duso/pagamento-da-touchpoint-pagopa/app-io.md)

## Ente Creditore

* [Adesione](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/adesione.md)
* [Modalità d'integrazione](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/modalita-dintegrazione/README.md)
  * [Integrazione tramite API](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/modalita-dintegrazione/integrazione-tramite-api.md)
  * [Integrazione touch point dell’EC con Checkout](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/modalita-dintegrazione/integrazione-touch-point-dellec-con-checkout.md)
  * [Best practice](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/modalita-dintegrazione/best-practice.md)
* [Generazione dell’Identificativo Univoco di Versamento](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/generazione-dellidentificativo-univoco-di-versamento.md)
* [Tassonomia dei servizi di incasso](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/tassonomia-dei-servizi-di-incasso.md)
* [Tributi multi-beneficiario](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/tributi-multi-beneficiario.md)
* [Attestazione di pagamento](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/attestazione-di-pagamento.md)
* [Processo di avvio in Esercizio](../../../../pagopa/sanp/sanp_3.0.0/ente-creditore/processo-di-avvio-in-esercizio.md)

## Prestatore di Servizi di Pagamento

* [Adesione](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/adesione.md)
* [Modalità di integrazione](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/README.md)
  * [Integrazione tramite API](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-tramite-api.md)
  * [Catalogo Dati Informativi](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/catalogo-dati-informativi.md)
  * [Offrire sistemi di pagamento su touch point di PagoPA S.p.A.](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/offrire-sistemi-di-pagamento-su-touch-point-di-pagopa-s.p.a..md)
  * [Gestione strumenti di pagamento](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/gestione-strumenti-di-pagamento.md)
  * [Best practice](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/best-practice.md)
* [Commissioni](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/commissioni.md)
* [Attestazione di pagamento](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/attestazione-di-pagamento.md)
* [Processo di avvio in Esercizio](../../../../pagopa/sanp/sanp_3.0.0/prestatore-di-servizi-di-pagamento/processo-di-avvio-in-esercizio.md)

## Esperienza per il Cittadino

* [App IO](../../../../pagopa/sanp/sanp_3.0.0/esperienza-per-il-cittadino/app-io/README.md)
  * [Carte](../../../../pagopa/sanp/sanp_3.0.0/esperienza-per-il-cittadino/app-io/carte.md)
  * [PayPal](../../../../pagopa/sanp/sanp_3.0.0/esperienza-per-il-cittadino/app-io/paypal.md)
* [Checkout](../../../../pagopa/sanp/sanp_3.0.0/esperienza-per-il-cittadino/checkout.md)

## Appendici

* [Connettività](../../../../pagopa/sanp/sanp_3.0.0/appendici/connettivita.md)
* [Indicatori di qualità per i soggetti aderenti](../../../../pagopa/sanp/sanp_3.0.0/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/README.md)
  * [Livelli di Servizio Enti Creditori](../../../../pagopa/sanp/sanp_3.0.0/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-enti-creditori.md)
  * [Livelli di Servizio PSP](../../../../pagopa/sanp/sanp_3.0.0/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-psp.md)
* [Generazione e stampa degli avvisi](http://localhost:5000/o/KXYtsf32WSKm6ga638R3/s/E9RM3F60OM97FbTVrCW8/)
* [Primitive](../../../../pagopa/sanp/sanp_3.0.0/appendici/primitive.md)
* [Funzionalità deprecate](../../../../pagopa/sanp/sanp_3.0.0/appendici/funzionalita-deprecate.md)

## FAQ

* [Ente Creditore](../../../../pagopa/sanp/sanp_3.0.0/faq/ente-creditore.md)
* [PSP](../../../../pagopa/sanp/sanp_3.0.0/faq/psp.md)
* [Intermediario tecnologico](../../../../pagopa/sanp/sanp_3.0.0/faq/intermediario-tecnologico.md)
