docs/pago-pa/sanp/3.8.0/SUMMARY.md
# Table of contents

* [⬅️ Torna a pagoPA.gov.it](https://www.pagopa.gov.it/)

## Specifiche attuative del nodo dei pagamenti SPC

* [Premessa](README.md)
* [Changelog](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/changelog.md)
* [Glossario](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/glossario.md)
* [Roadmap](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/roadmap.md)
* [Documentazione](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/documentazione.md)
* [Funzionamento generale](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/README.md)
  * [Ruoli](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ruoli.md)
  * [Ciclo di vita di un pagamento](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ciclo-di-vita-di-un-pagamento.md)
  * [Processi di pagamento](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/processi-di-pagamento.md)
  * [Rendicontazione e Cashflow](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/rendicontazione-e-cashflow.md)
  * [Overview delle componenti](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/overview-delle-componenti.md)
  * [Sicurezza e conservazione](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/sicurezza-e-conservazione.md)
  * [L’adesione alla piattaforma pagoPA](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ladesione-alla-piattaforma-pagopa.md)
  * [Utilizzo del marchio pagoPA](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/utilizzo-del-marchio-pagopa.md)
  * [Stand In](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/stand-in.md)
* [Erogazione e Livelli di servizio](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/erogazione-e-livelli-di-servizio.md)
* [Modello dati](../../../zAhhg91nnC8aY3hDkMJu/specifiche-attuative-del-nodo-dei-pagamenti-spc/modello-dati.md)

## Casi d'uso

* [Pagamento di un avviso presso PSP](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-di-un-avviso-presso-psp.md)
* [Pagamento spontaneo presso PSP](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-spontaneo-presso-psp/README.md)
  * [Catalogo dei servizi](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-spontaneo-presso-psp/catalogo-dei-servizi.md)
  * [Bollo auto](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-spontaneo-presso-psp/bollo-auto.md)
* [Pagamento presso frontend dell'EC](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-presso-frontend-dellec.md)
* [Pagamento da Touchpoint PagoPA](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-da-touchpoint-pagopa/README.md)
  * [Checkout](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-da-touchpoint-pagopa/checkout.md)
  * [App IO](../../../zAhhg91nnC8aY3hDkMJu/casi-duso/pagamento-da-touchpoint-pagopa/app-io.md)

## Ente Creditore

* [Adesione](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/adesione.md)
* [Modalità d'integrazione](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/modalita-dintegrazione/README.md)
  * [Integrazione tramite API asincrone](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/modalita-dintegrazione/integrazione-tramite-api-asincrone.md)
  * [Integrazione tramite API sincrone](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/modalita-dintegrazione/integrazione-tramite-api-sincrone.md)
  * [Integrazione touch point dell’EC con Checkout](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/modalita-dintegrazione/integrazione-touch-point-dellec-con-checkout.md)
  * [Best practice](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/modalita-dintegrazione/best-practice.md)
* [Generazione dell’Identificativo Univoco di Versamento](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/generazione-dellidentificativo-univoco-di-versamento.md)
* [Tassonomia dei servizi di incasso](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/tassonomia-dei-servizi-di-incasso.md)
* [Tributi multi-beneficiario](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/tributi-multi-beneficiario.md)
* [Attestazione di pagamento](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/attestazione-di-pagamento.md)
* [Riconciliazione contabile](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/riconciliazione-contabile.md)
* [Servizio @e.bollo](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/servizio-e.bollo.md)
* [Stampa avvisi pagoPA](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/stampa-avvisi-pagopa.md)
* [Processo di avvio in Esercizio](../../../zAhhg91nnC8aY3hDkMJu/ente-creditore/processo-di-avvio-in-esercizio.md)

## Prestatore di Servizi di Pagamento

* [Adesione](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/adesione.md)
* [Modalità di integrazione](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/README.md)
  * [Integrazione tramite API](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-tramite-api.md)
  * [Catalogo Dati Informativi](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/catalogo-dati-informativi.md)
  * [Offrire sistemi di pagamento su touchpoints di PagoPA S.p.A.](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/offrire-sistemi-di-pagamento-su-touchpoints-di-pagopa-s.p.a..md)
  * [Integrazione standard per gli strumenti di pagamento](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-standard-per-gli-strumenti-di-pagamento.md)
  * [Integrazione per strumento di pagamento PayPal](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-paypal.md)
  * [Integrazione per strumento di pagamento tramite Redirect](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect.md)
  * [Best practice](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/best-practice.md)
* [Commissioni](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/commissioni.md)
* [Attestazione di pagamento](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/attestazione-di-pagamento.md)
* [Processo di avvio in Esercizio](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/processo-di-avvio-in-esercizio.md)
* [Quality Improvement](../../../zAhhg91nnC8aY3hDkMJu/prestatore-di-servizi-di-pagamento/quality-improvement.md)

## Esperienza per il Cittadino

* [App IO](../../../zAhhg91nnC8aY3hDkMJu/esperienza-per-il-cittadino/app-io/README.md)
  * [Carte](../../../zAhhg91nnC8aY3hDkMJu/esperienza-per-il-cittadino/app-io/carte.md)
  * [PayPal](../../../zAhhg91nnC8aY3hDkMJu/esperienza-per-il-cittadino/app-io/paypal.md)
* [Checkout](../../../zAhhg91nnC8aY3hDkMJu/esperienza-per-il-cittadino/checkout.md)

## Appendici

* [Connettività](../../../zAhhg91nnC8aY3hDkMJu/appendici/connettivita.md)
* [Indicatori di qualità per i soggetti aderenti](../../../zAhhg91nnC8aY3hDkMJu/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/README.md)
  * [Livelli di Servizio Enti Creditori](../../../zAhhg91nnC8aY3hDkMJu/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-enti-creditori.md)
  * [Livelli di Servizio PSP](../../../zAhhg91nnC8aY3hDkMJu/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-psp.md)
* [Giornale degli eventi](../../../zAhhg91nnC8aY3hDkMJu/appendici/giornale-degli-eventi.md)
* [Generazione e stampa degli avvisi](https://docs.pagopa.it/avviso-pagamento)
* [Gestione evoluta commissioni](../../../zAhhg91nnC8aY3hDkMJu/appendici/gestione-evoluta-commissioni.md)
* [Primitive](../../../zAhhg91nnC8aY3hDkMJu/appendici/primitive.md)
* [Funzionalità deprecate](../../../zAhhg91nnC8aY3hDkMJu/appendici/funzionalita-deprecate.md)
* [Posizioni Debitorie](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/README.md)
  * [Modello Dati](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/modello-dati.md)
  * [Stati della posizione debitoria](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/stati-della-posizione-debitoria.md)
  * [Pagamenti presso frontend dell'EC in modalità asincrona](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/pagamenti-presso-frontend-dellec-in-modalita-asincrona.md)
  * [Gestione Massiva](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/gestione-massiva/README.md)
    * [📄 Specifiche tracciato di input](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/gestione-massiva/specifiche-tracciato-di-input.md)
    * [⚙️ Gestione massiva tramite API REST](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/gestione-massiva/gestione-massiva-tramite-api-rest.md)
    * [📥 Gestione massiva tramite SFTP](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/gestione-massiva/gestione-massiva-tramite-sftp.md)
  * [Operazioni disponibili](../../../zAhhg91nnC8aY3hDkMJu/appendici/posizioni-debitorie/operazioni-disponibili.md)
* [POS Fisici](../../../zAhhg91nnC8aY3hDkMJu/appendici/pos-fisici.md)

## FAQ

* [Ente Creditore](../../../zAhhg91nnC8aY3hDkMJu/faq/ente-creditore.md)
* [PSP](../../../zAhhg91nnC8aY3hDkMJu/faq/psp.md)
* [Intermediario tecnologico](../../../zAhhg91nnC8aY3hDkMJu/faq/intermediario-tecnologico.md)
